# eidola

./: .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .rumdl.toml  .swift-format  AGENTS.md  CLA-CORPORATE.md  CLA-INDIVIDUAL.md  CLA-SIGNERS.txt  Cargo.toml  Dockerfile  PRIVACY-GUARANTEES.md  README.md  REPRODUCIBILITY.md  SECURITY.md  artifact-manifest.json  build.sh  compose.prod.yaml  compose.yaml  deny.toml  docker-bake.hcl  docker-build.sh  flake.nix  flake.nix.backup  flake.nix.claude  flake.nix.codex  justfile  release-flow-notes.md  rust-toolchain.toml  tinfoil-config.yml
apps/cli/: Cargo.toml  schema.sql
apps/cli/schema/: schema.sql
apps/cli/src/: attestation.rs  bridge.rs  config.rs  db.rs  http.rs  main.rs  render.rs  wallet.rs
apps/eidolons-shared/: Cargo.toml  Package.swift
apps/eidolons-shared/src/: app.rs  lib.rs
apps/eidolons-shared/src/capabilities/: eidolons.rs  mod.rs  perception.rs
apps/eidolons-shared/src/services/: eidolons_perception.rs  mod.rs
apps/eidolons-shared/swift/Sources/EidolonsShared/: eidolons_shared.swift
apps/eidolons-shared/swift/Sources/EidolonsSharedFFI/: eidolons_sharedFFI.h  module.modulemap
apps/eidolons-shared/swift/Tests/EidolonsSharedTests/: EidolonsSharedTests.swift
apps/gui/: AGENTS.md  Cargo.toml
apps/gui/Support/: Info.plist
apps/gui/src/: account.rs  actions.rs  chat.rs  core.rs  general.rs  lib.rs  main.rs  settings.rs  theme.rs  wallet.rs
apps/gui/tests/: behavior.rs  visual.rs
apps/gui/tests/visual/: cases.rs  harness.rs
core/: Cargo.toml  (+2 more)
crates/devtools/: Cargo.toml
crates/devtools/src/: lib.rs
crates/eidola-app-core/: Cargo.toml  Package.resolved  Package.swift  build.rs  schema.md
crates/eidola-app-core/schema/: schema.sql
crates/eidola-app-core/src/: changes.rs  config.rs  db.rs  error.rs  lib.rs  trust_root.rs  updater.rs  updates.rs
crates/eidola-app-core/src/updater/: human_attestation.rs  merkle.rs  mod.rs  rekor_verify.rs  sigstore_bundle.rs  trust.rs
crates/eidola-app-core/src/updater/ci_sigstore/: cert.rs  mod.rs  rekor.rs
crates/eidola-app-core/swift/Sources/EidolaAppCore/: eidola_app_core.swift
crates/eidola-app-core/swift/Sources/EidolaAppCoreFFI/: eidola_app_coreFFI.c  eidola_app_coreFFI.h  module.modulemap
crates/eidola-app-core/swift/Tests/EidolaAppCoreTests/: EidolaSharedTests.swift
crates/eidola-app-core/tests/: bus.rs  chat_path.rs  ci_sigstore_fixture.rs  human_attestation_fixture.rs  updater_fixtures.rs  updates_check.rs
crates/eidola-app-core/tests/chat_harness/: mod.rs
crates/eidola-attestation/: Cargo.toml
crates/eidola-attestation/src/: lib.rs  trust_shapes.rs
crates/eidola-cli/: Cargo.toml
crates/eidola-cli/src/: main.rs
crates/eidola-gui/: AGENTS.md  Cargo.toml
crates/eidola-gui/Support/: Info.plist
crates/eidola-gui/examples/: driver.rs
crates/eidola-gui/src/: about.rs  account.rs  actions.rs  bridge.rs  chat.rs  core.rs  general.rs  lib.rs  library.rs  loadable.rs  plans.rs  probe.rs  record.rs  settings.rs  space.rs  theme.rs  updates.rs  wallet.rs  window_input.rs
crates/eidola-gui/src/stores/: account.rs  config.rs  mod.rs  models.rs  record.rs  spaces.rs  update.rs  wallet.rs
crates/eidola-gui/tests/: behavior.rs  probe.rs  stores.rs  visual.rs
crates/eidola-gui/tests/visual/: cases.rs  harness.rs
crates/eidola-server/: Cargo.toml  build.rs  openapi.json
crates/eidola-server/schema/: schema.sql
crates/eidola-server/src/: account.rs  api_doc.rs  auth.rs  backend.rs  credentials.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  measurements.rs  middleware.rs  response.rs  telemetry.rs  types.rs  webhook.rs
crates/eidola-shared/: Cargo.toml  Package.swift
crates/eidola-shared/src/: app.rs  lib.rs
crates/eidolons-perception/: Cargo.toml
crates/eidolons-perception/src/: generation.rs  lib.rs  model_manager.rs  tokenizer.rs  weights.rs
crates/eidolons-perception/src/llama/: attention.rs  config.rs  embedding.rs  mlp.rs  mod.rs  model.rs  norm.rs
crates/eidolons-perception/src/qwen3/: attention.rs  config.rs  mod.rs  model.rs
crates/eidolons-server/: Cargo.toml  Containerfile  openapi.json  schema.sql
crates/eidolons-server/schema/: schema.sql
crates/eidolons-server/src/: account.rs  api_doc.rs  attestation.rs  auth.rs  backend.rs  credentials.rs  db.rs  error.rs  handlers.rs  helpers.rs  lib.rs  main.rs  measurements.rs  response.rs  stripe.rs  tls.rs  tokens.rs  types.rs  webhook.rs
crates/eidolons-shared/: Cargo.toml
crates/eidolons-shared/src/: app.rs  lib.rs
crates/eidolons-shared/src/capabilities/: hello.rs  mod.rs  perception.rs
crates/eidolons-shared/src/services/: eidolons_perception.rs  mod.rs
crates/gpui-markdown-editor/: AGENTS.md  Cargo.toml
crates/gpui-markdown-editor/src/: analysis.rs  editor.rs  element.rs  escapes.rs  event.rs  image.rs  lib.rs  math.rs  parser.rs  render.rs  render_spec.rs  state.rs  style.rs  syntax.rs  update.rs
crates/gpui-markdown-editor/tests/: behavior.rs  session.rs  visual.rs
crates/gpui-markdown-editor/tests/visual/: cases.rs  harness.rs
crates/measure-enclave/: Cargo.toml
crates/measure-enclave/src/: main.rs
crates/release-tool/: Cargo.toml
crates/release-tool/src/: attest.rs  main.rs  pkcs11.rs  provenance.rs  trust.rs  verify.rs
crates/rumdl/: Cargo.toml
crates/rumdl/src/: lib.rs
crates/tinfoil-shim-mock/: Cargo.toml  Containerfile
crates/tinfoil-shim-mock/src/: main.rs
crates/tinfoil-verifier/: Cargo.toml  README.md
crates/tinfoil-verifier/src/: attesting_client.rs  bundle.rs  error.rs  lib.rs  measurement.rs  pinned_client.rs  sevsnp.rs  sevsnp_crl.rs  tdx.rs
crates/tinfoil-verifier/tests/: integration.rs  live_attest.json
server/: Cargo.toml  flake.nix
server/generate-openapi/: Cargo.toml
server/server/src/: openai.rs  proxy.rs
server/src/: anthropic.rs  generate_openapi.rs  lib.rs  main.rs  openai.rs  transform.rs
server/tests/: integration.rs
tools/generate-openapi/: Cargo.toml
tools/generate-openapi/src/: main.rs
tools/shared-typegen/: Cargo.toml
tools/shared-typegen/src/: main.rs
(+181 files in other folders)
