[workspace]

members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mike Marcacci"]
repository = "https://github.com/eidola-ai/eidola"
publish = false

# Redirect all three gpui-component crates to the eidola-ai fork, which
# carries the `fix/asset-paths-link` branch making the icons accessible
# inside each crate's package boundary (the upstream layout reaches into
# sibling crates, which breaks under cargo vendor — and embeds
# NIX_BUILD_TOP into our release binary as a side effect). Drop this block
# once the upstream PR at longbridge/gpui-component lands and we bump our
# pinned rev in crates/eidola-gui/Cargo.toml.
[patch."https://github.com/longbridge/gpui-component"]
gpui-component = { git = "https://github.com/eidola-ai/gpui-component", rev = "e7b5ecbcdbb80ff5626359239f1b663d397296b4" }
gpui-component-assets = { git = "https://github.com/eidola-ai/gpui-component", rev = "e7b5ecbcdbb80ff5626359239f1b663d397296b4" }
gpui-component-macros = { git = "https://github.com/eidola-ai/gpui-component", rev = "e7b5ecbcdbb80ff5626359239f1b663d397296b4" }

[profile.docker-dev]
inherits = "dev"
opt-level = 1

[profile.release]
# Incremental compilation is disabled to avoid non-determinism.
incremental = false
# Codegen units are set to 1 to avoid potential non-determinism.
codegen-units = 1
# Explicit thin link-time optimization
lto = "thin"
# Explicit optimization level
opt-level = 3
# Strip symbols for determinism
strip = true
# Explicit overflow check setting
overflow-checks = false
