[workspace]

members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mike Marcacci"]
repository = "https://github.com/eidola-ai/eidola"
publish = false

# Redirect all three gpui-component crates to the eidola-ai fork, which
# carries the `fix/asset-paths-link` branch making the icons accessible
# inside each crate's package boundary (the upstream layout reaches into
# sibling crates, which breaks under cargo vendor — and embeds
# NIX_BUILD_TOP into our release binary as a side effect). Drop this block
# once the upstream PR at longbridge/gpui-component lands and we bump our
# pinned rev in crates/eidola-gui/Cargo.toml.
[patch."https://github.com/longbridge/gpui-component"]
gpui-component = { git = "https://github.com/eidola-ai/gpui-component", rev = "ad16cd47faf14ce7d57695b84d3c9b0f4cf05a24" }
gpui-component-assets = { git = "https://github.com/eidola-ai/gpui-component", rev = "ad16cd47faf14ce7d57695b84d3c9b0f4cf05a24" }
gpui-component-macros = { git = "https://github.com/eidola-ai/gpui-component", rev = "ad16cd47faf14ce7d57695b84d3c9b0f4cf05a24" }

# reqwest fork adding `TlsInfo::tls_exporter_channel_binding()` (RFC 9266
# tls-exporter channel binding), used by `tinfoil-verifier` to bind attestation
# to the TLS session. Tracks the upstream PR; drop this patch once it merges and
# a release ships the accessor.
[patch.crates-io]
reqwest = { git = "https://github.com/eidola-ai/reqwest", rev = "7c029cc9b3f4b52134c59304c43c1bb8e7603eb3" }

[profile.docker-dev]
inherits = "dev"
opt-level = 1

[profile.release]
# Incremental compilation is disabled to avoid non-determinism.
incremental = false
# Codegen units are set to 1 to avoid potential non-determinism.
codegen-units = 1
# Full LTO. Thin LTO is faster but uses LLVM's internal threadpool for
# parallel codegen, which produces nondeterministic instruction layout
# even with codegen-units=1 — empirically verified by force-rebuilding
# eidola-gui from scratch and finding ~26 KB of byte-level drift in the
# arm64 binary (mostly +4/+8 immediate-operand shifts inside identical
# function locations, a classic thin-LTO data-placement-reordering
# signature). Fat LTO is single-threaded by construction. Slower link
# (~minutes for the GUI), same output bit-for-bit.
lto = "fat"
# Explicit optimization level
opt-level = 3
# Strip symbols for determinism
strip = true
# Explicit overflow check setting
overflow-checks = false
