[workspace]

members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mike Marcacci"]
repository = "https://github.com/eidola-ai/eidola"
publish = false

[profile.docker-dev]
inherits = "dev"
opt-level = 1

[profile.release]
# Incremental compilation is disabled to avoid non-determinism.
incremental = false
# Codegen units are set to 1 to avoid potential non-determinism.
codegen-units = 1
# Full LTO. Thin LTO is faster but uses LLVM's internal threadpool for
# parallel codegen, which produces nondeterministic instruction layout
# even with codegen-units=1 — empirically verified by force-rebuilding
# eidola-gui from scratch and finding ~26 KB of byte-level drift in the
# arm64 binary (mostly +4/+8 immediate-operand shifts inside identical
# function locations, a classic thin-LTO data-placement-reordering
# signature). Fat LTO is single-threaded by construction. Slower link
# (~minutes for the GUI), same output bit-for-bit.
lto = "fat"
# Explicit optimization level
opt-level = 3
# Strip symbols for determinism
strip = true
# Explicit overflow check setting
overflow-checks = false
