[package]
name = "eidola-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "eidola"
path = "src/main.rs"

[dependencies]
anonymous-credit-tokens = "0.4"
base64 = "0.22"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
open = "5"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-rustcrypto = "0.0.2-alpha"
rustls-native-certs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tinfoil-verifier = { path = "../../crates/tinfoil-verifier" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "1"
turso = { git = "https://github.com/eidola-ai/turso", branch = "reproducible-builds", default-features = false, features = ["pure-rust-crypto"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
x509-cert = "0.2"
der = { version = "0.8", features = ["pem", "alloc"] }
