[package]
name = "eidola-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "eidola"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
eidola-app-core = { path = "../../crates/eidola-app-core" }
open = "5"
