[package]
name = "eidola-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "eidola-gui"
path = "src/main.rs"

[dependencies]
# gpui-component pulls gpui/gpui_platform from zed-industries/zed without a rev,
# so we mirror that spec exactly to avoid resolving two copies of gpui.
# Cargo.lock is the canonical pin for the resolved zed commit.
#
# `inspector` enables the in-app element inspector (Window::toggle_inspector +
# the rich gpui-component renderer). Also auto-enabled in debug builds via
# `debug_assertions`; the explicit feature ensures it works in release builds.
gpui = { git = "https://github.com/zed-industries/zed", features = ["inspector"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "01a116a15e9660963a2aa07d0192e38785d8b9ad", features = ["inspector"] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "01a116a15e9660963a2aa07d0192e38785d8b9ad" }

eidola-app-core = { path = "../../crates/eidola-app-core" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
# Pulls in `VisualTestAppContext` and `Window::render_to_image`. Cargo unifies
# this with the regular `gpui` dep, so feature flags merge for dev/test builds.
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["test-support", "font-kit"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[[test]]
name = "visual"
path = "tests/visual.rs"
# Skip libtest's worker-thread harness — VisualTestAppContext talks to AppKit
# and must run on the main thread. With `harness = false` the test binary's
# `fn main()` runs directly, on whatever thread cargo invokes it on (the OS
# main thread for `cargo test --test visual` on macOS).
harness = false
