[package]
name = "eidola-app-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anonymous-credit-tokens = "0.4"
base64 = "0.22"
blake3 = "1"
der = { version = "0.7", features = ["pem", "alloc"] }
dirs = "6"
eidola-attestation = { path = "../eidola-attestation" }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json", "stream"] }
futures-util = { version = "0.3", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-native-certs = "0.8"
rustls-rustcrypto = "0.0.2-alpha"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tinfoil-verifier = { path = "../tinfoil-verifier" }
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
toml = "1"
turso = { git = "https://github.com/eidola-ai/turso", rev = "57f08f4c7675ab865cd025bf7fab12c8bf6b4be1", default-features = false, features = ["pure-rust-crypto"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
x509-cert = "0.2"

[build-dependencies]
serde_json = "1"
sha2 = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
