[package]
name = "eidola-app-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anonymous-credit-tokens = "0.4"
base64 = "0.22"
blake3 = "1"
const-oid = { version = "0.9", features = ["db"] }
der = { version = "0.7", features = ["pem", "alloc"] }
dirs = "6"
ecdsa = { version = "0.16", features = ["der", "verifying"] }
ed25519-dalek = "2"
eidola-attestation = { path = "../eidola-attestation" }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8", "std"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json", "stream"] }
futures-util = { version = "0.3", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-native-certs = "0.8"
rustls-rustcrypto = "0.0.2-alpha"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
signature = "2"
spki = { version = "0.7", features = ["pem"] }
ssh-key = { version = "0.6", features = ["ed25519", "p256", "p384"] }
thiserror = "2"
tinfoil-verifier = { path = "../tinfoil-verifier" }
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
toml = "1"
turso = { git = "https://github.com/eidola-ai/turso", rev = "57f08f4c7675ab865cd025bf7fab12c8bf6b4be1", default-features = false, features = ["pure-rust-crypto"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
x509-cert = "0.2"

[build-dependencies]
serde_json = "1"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
