[package]
name = "eidola-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "eidola"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
eidola-app-core = { path = "../eidola-app-core" }
open = "5"
tokio = { version = "1", features = ["sync", "macros"] }
