[package]
name = "eidola-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = []
typegen = ["crux_core/typegen"]

[dependencies]
crux_core = "0.17"
serde = { version = "1.0", features = ["derive"] }
uniffi = "0.31.0"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[dev-dependencies]
