[package]
name = "eidolons-perception"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
# Enable GPU acceleration via WGPU (Metal on macOS, Vulkan elsewhere).
# Note: WGPU types are not Send+Sync, so this feature is incompatible with UniFFI.
gpu = ["burn-wgpu", "burn-cubecl", "qwen3-burn/wgpu"]
# Enable Apple Silicon native acceleration via MLX backend.
mlx = ["qwen3-burn/mlx"]

[dependencies]
burn = { version = "0.20", features = ["autodiff"] }
burn-cubecl = { version = "0.20", optional = true }
burn-wgpu = { version = "0.20", features = ["metal"], optional = true }
burn-ndarray = "0.20"
qwen3-burn = { git = "https://github.com/eidolons-ai/qwen3-burn.git", branch = "burn-mlx", default-features = false, features = ["ndarray"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# HuggingFace Hub - use tokio/reqwest backend without ureq (which hardcodes ring)
hf-hub = { version = "0.4", default-features = false, features = ["tokio"] }

# HTTP client with pure-Rust TLS (no ring/aws-lc-rs C dependencies for cross-compilation)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "json", "stream"] }

# Pure Rust TLS crypto provider
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-rustcrypto = "0.0.2-alpha"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tokenization (pure Rust - use features that avoid C dependencies)
tokenizers = { version = "0.22", default-features = false, features = ["unstable_wasm", "onig"] }

# SafeTensors loading for model weights
safetensors = "0.4"

# Random sampling for generation
rand = "0.8"

# Half-precision float conversion for weight loading
half = "2.4"

# Safe transmute for tensor data conversion
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
