[package]
name = "eidolons-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "eidolons-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (minimal)
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"

# HTTP client for upstream requests (using rustls with pure-Rust crypto for cross-compilation)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "json", "stream"] }

# Pure Rust TLS crypto provider (no C/assembly dependencies)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-rustcrypto = "0.0.2-alpha"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAPI documentation
utoipa = { version = "5", features = ["uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Anonymous Credit Tokens (Privacy Pass ACT)
anonymous-credit-tokens = "0.4"

# HTTP types (used by auth module)
http = "1"

# Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = "0.14"

# Authentication
argon2 = "0.5"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Encoding
base64 = "0.22"

# Utilities
futures-util = "0.3"
bytes = "1"
tokio-stream = "0.1"
