[package]
name = "eidolons-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = []
typegen = ["crux_core/typegen", "crux_http/typegen"]

[dependencies]
base64 = "0.22"
crux_core = "0.16"
crux_http = { version = "0.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uniffi = "0.30.0"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[dev-dependencies]
